--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "freefire-points-app",
   "version": "1.0.0",
+  "description": "Free Fire Points App",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
   }
 }
